--- a/index.html
+++ b/index.html
@@ -27,15 +27,19 @@
 		<!-- Currently reading -->
 		<h2 class="currently">Currently Reading:</h2>
 		<div id="boxes">	
-			<div id="leftbox">
-				<img src="img2/adance.jpeg">
+			<div id="leftbook">
+				<img src="img2/americanah.jpeg" class="leftbookimg">
 				<p class="leftbookcap">
-					<em>A Dance with Dragons</em>
+					<em>Americanah</em>
+				<p class="leftbookdes">
+					"Ifemelu and Obinze are young and in love when they depart military-ruled Nigeria for the West."
 				</p>
 			</div>
-			<div id="rightbox">
-				<img src="img2/sapiens.jpeg">
-				<p class="rightbookcap"><em>Sapiens: A Brief History of HumanKind</em></p>
+			<div id="rightbook">
+				<img src="img2/undying.jpeg"  class="rightbookimg">
+				<p class="rightbookcap"><em>The Undying</em></p>
+				<p class="rightbookdes">"A week after her forty-first birthday, the acclaimed poet Anne Boyer was diagnosed with highly aggressive triple-negative breast cancer. "</p>
+
 			</div>	
 		</div>
 
@@ -51,15 +55,12 @@
 				<p class = "gamecap"><em>A Game of Thrones</em></p>
 			</div>
 			<div id="rightbox">
-				<!-- <img class="julieimg" src="img2/julieandme.jpeg">
-				<p class="juliecap">Julie, Me and Michael Owen Makes Three</p> -->
-				<p>If I'm being honest, I would probably include all the books from <em>A Song of Ice and Fire</em> in my Top Picks. But I decided to limit myself to one.<em> A Game of Thrones</em>, by George R. R. Martin, kicks off this epic fantasy series about kings, lords, magic and death. Engaging, witty, and fucking entertaining, Martin has created an immersive fantasy world that keeps the reader invested with every page. Although no character is all good or all bad, you'll find yourself rooting for some and wishing the worst for others. I think it's fair to say that we all have a soft spot for "cripples, bastards and broken things."</p>
+
+				<p>If I'm being honest, I would probably include all the books from <em>A Song of Ice and Fire</em> in my Top Picks. But I decided to limit myself to two. The first one is<em> A Game of Thrones</em>, by George R. R. Martin. This book kicks off this epic fantasy series about kings, lords, magic and death. Engaging, witty, and fucking entertaining, Martin has created an immersive fantasy world that keeps the reader invested with every page. Although no character is all good or all bad, you'll find yourself rooting for some and wishing the worst for others. I think it's fair to say that we all have a soft spot for "cripples, bastards and broken things."</p>
 
 			</div>
 			<div id="rightbox">
-				<!-- <img src="img2/wallflower.jpeg">
-				<p class="wallflowercap">The Perks of Being a Wallflower</p>
-			-->
+
 				<p class = "julietext"><em>Julie, Me, and Michael Owen Makes Three</em>, by Alan Gibbons, was one of my favourite books growing up. As a diehard Arsenal fan, I never thought I would find myself rooting for Manchester United. But Gibbons has somehow managed to create a book that even the biggest Manchester United haters would enjoy. The main protagonist, Terry Payne, is a relatable character for any football fan in high school. As he tries to balance his love for the beautiful game and the pressures of high school, he falls hopelessly in love with a girl he has hardly spoken to. We've all been there before, haven't we? As you read the book, you'll find yourself frustrated with Terry, feeling sorry for him, but most of all, empathetic. 
 				</p>
 			</div>
@@ -72,10 +73,8 @@
 				<p class="jokecap"><em>Batman: The Killing Joke</em></p>
 			</div>
 			<div id ="rightbox">
-				<!-- <img src="img2/kings.jpeg">
-				<p class="clashcap">A Clash of Kings</p>
-			-->
-				<p>Picking your favourite comic book is one of the toughest choices you'll ever have to make. <em>Batman: The Killing Joke</em> is my choice. Written by Alan Moore and illustrated by Brian Bolland, this comic book tells another story about Batman against the Joker. But it's different this time. This dark short story provides us with a detailed origin story for the Joker and the reasons behind his madness. Moore's gritty tone blends excellently with Bolland's gorgeous art. And the ending is just... perfect.</p>
+
+				<p class="joketext">Picking your favourite comic book is one of the toughest choices you'll ever have to make. <em>Batman: The Killing Joke</em> is my choice. Written by Alan Moore and illustrated by Brian Bolland, this comic book tells another story about Batman against the Joker. But it's different this time. This dark short story provides us with a detailed origin story for the Joker and the reasons behind his madness. Moore's gritty tone blends excellently with Bolland's gorgeous art. And the ending is just... perfect.</p>
 			</div>
 			<div id="leftbox">
 				<img src="img2/afuck.jpeg">
@@ -87,11 +86,19 @@
 			-->
 				<p class = "afucktext" >Who thought that a book that tells you that you're not special could be so inspiring? As someone who prefers fiction and has never had strong feelings towards self-help books, <em>the Subtle Art of Not Giving a Fuck</em> has somehow found its way into my Top Picks. Mark Manson doesn't hold back when he's telling you that you've spent way too long giving a fuck about everything when you should be reserving your fucks for what truly matters. It's actually a lot better than it sounds, and even if you do feel attacked while reading it, you'll be glad you made it to the end. My favourite chapters were: "The Importance of Saying No" and "You Are Not Special." </p>
 			</div>
+			<div id = "leftbox">
+				<img src="img2/adance.jpeg">
+				<p class="adancecap"><em>A Dance with Dragons</em>
+			</div>
+			<div id="rightbox">
+				<p class="adancetext"> A Dance with Dragons is my second pick from a Song of Ice and Fire. In the latest and longest installment of the series, Martin takes the story to the next level. The tale is filled with unexpected twists, unforeseen consequences and unrelenting cruelty. The reader never knows what's next for their favourite characters in this unforgiving story. Martin said it is really "mean" that some fans are afraid he'll die before finishing the last two books. I agree with Martin. But I also think it will be a damn shame if we don't get a conclusion to his epic tale.</p>
+			</div>
 		</div>
 		<!-- Other Books I've Read -->
 		<br>
 			<h2 class="other">Other Books I Have Read:</h2>
 			<ul>
+				<li><a class = "a2" href="https://awoiaf.westeros.org/index.php/A_Knight_of_the_Seven_Kingdoms" target="_blank">A Knight of the Seven Kingdoms</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Feast_for_Crows" target="_blank">A Feast for Crows</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Clash_of_Kings" target="_blank">A Clash of Kings</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Storm_of_Swords" target="_blank">A Storm of Swords</a></li>
