--- a/quotes.html
+++ b/quotes.html
@@ -10,6 +10,14 @@
 	<main>
 	<p class= "quotestext">*Still working on this page*</p>
 
+	<p class= "quotestext">“A reader lives a thousand lives before he dies, said Jojen. The man who never reads lives only one."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Dance with Dragons</em></p>
+
+	<p class= "quotestext">“Men's lives have meaning, not their deaths."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Dance with Dragons</em></p>
+
 	<p class= "quotestext">“It is our choices, … that show what we truly are, far more than our abilities."
 		<br>
 	&nbsp; &nbsp; &nbsp; - &nbsp; J. K. Rowling, <em>Harry Potter and the Chamber of Secrets</em></p>
