--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 		<h2 class="about">What is this website for?</h2>
 		<p class="aboutcap">This website is a space for me to practice my coding and share my love of books.</p>
 		<!-- Currently reading -->
-		<h2 class="currently">Currently Reading:</h2>
+		<h2 class="currently">Currently Reading (tap & hold a book cover to view its description):</h2>
 		<div id="boxes">	
 			<div id="leftbook">
-				<img src="img2/americanah.jpeg" class="leftbookimg">
+				<img src="img2/sixofcrows.jpeg" class="leftbookimg">
 				<p class="leftbookcap">
-					<em>Americanah</em>
+					<em>Six of Crows</em>
 				<p class="leftbookdes">
-					"Ifemelu and Obinze are young and in love when they depart military-ruled Nigeria for the West."
+					"Ketterdam: a bustling hub of international trade where anything can be had for the right price—and no one knows that better than criminal prodigy Kaz Brekker. Kaz is offered a chance at a deadly heist that could make him rich beyond his wildest dreams. But he can’t pull it off alone. . . .."
 				</p>
 			</div>
 			<div id="rightbook">
@@ -53,6 +53,10 @@
 				
 				<img src="img2/agameofthrones.jpeg">
 				<p class = "gamecap"><em>A Game of Thrones</em></p>
+				<p class="gamedes">
+					"A Game of Thrones tells an epic tale of honor and treachery, love and vengeful hatred, intrigue and heroism set in a world where summers and winters can last for years, even lifetimes. The story fashions itself around the Starks of Winterfell, a family whose legacy is one of stiff-necked honor."
+				</p>
+				
 			</div>
 			<div id="rightbox">
 
@@ -67,10 +71,16 @@
 			<div id="leftbox">
 				<img src="img2/julieandme.jpeg">
 				<p class = "juliecap"><em>Julie, Me, and Michael Owen Makes Three</em></p>
+				<p class="juliedes">
+					"This is Terry's diary as he tries to cope simultaneously with his first love, the unexpected break-up of  his parent's marriage, and the traumas of the Beautiful Game. A lighthearted, fast-paced, bang-up-to-the-minute, and totally credible account of a 15-year-old boy who worries that he looks like Chris Evans."
+				</p>
 			</div>
 			<div id="leftbox">
 				<img src="img2/killingjoke.jpeg">
 				<p class="jokecap"><em>Batman: The Killing Joke</em></p>
+				<p class="jokedes">
+					"For the first time the Joker's origin is revealed in this tale of insanity and human perseverance. Looking to prove that any man can be pushed past his breaking point and go mad, the Joker attempts to drive Commissioner Gordon insane."
+				</p>
 			</div>
 			<div id ="rightbox">
 
@@ -79,16 +89,16 @@
 			<div id="leftbox">
 				<img src="img2/afuck.jpeg">
 				<p class = "fuckcap"><em>The Subtle Art of Not Giving a Fuck</em></p>
+				<p class="afuckdes">"In this generation-defining self-help guide, a superstar blogger cuts through the crap to show us how to stop trying to be 'positive' all the time so that we can truly become better, happier people."</p>				
 			</div>
 			<div id ="rightbox">
-				<!-- <img src="img2/astormofswords.jpeg">
-				<p class="swordscap">A Storm of Swords</p>
-			-->
 				<p class = "afucktext" >Who thought that a book that tells you that you're not special could be so inspiring? As someone who prefers fiction and has never had strong feelings towards self-help books, <em>the Subtle Art of Not Giving a Fuck</em> has somehow found its way into my Top Picks. Mark Manson doesn't hold back when he's telling you that you've spent way too long giving a fuck about everything when you should be reserving your fucks for what truly matters. It's actually a lot better than it sounds, and even if you do feel attacked while reading it, you'll be glad you made it to the end. My favourite chapters were: "The Importance of Saying No" and "You Are Not Special." </p>
 			</div>
 			<div id = "leftbox">
 				<img src="img2/adance.jpeg">
 				<p class="adancecap"><em>A Dance with Dragons</em>
+				<p class="adancedes">"In the aftermath of a colossal battle, the future of the Seven Kingdoms hangs in the balance—beset by newly emerging threats from every direction."</p>				
+			</div>
 			</div>
 			<div id="rightbox">
 				<p class="adancetext"> A Dance with Dragons is my second pick from a Song of Ice and Fire. In the latest and longest installment of the series, Martin takes the story to the next level. The tale is filled with unexpected twists, unforeseen consequences and unrelenting cruelty. The reader never knows what's next for their favourite characters in this unforgiving story. Martin said it is really "mean" that some fans are afraid he'll die before finishing the last two books. I agree with Martin. But I also think it will be a damn shame if we don't get a conclusion to his epic tale.</p>
@@ -98,34 +108,34 @@
 		<br>
 			<h2 class="other">Other Books I Have Read:</h2>
 			<ul>
-				<li><a class = "a2" href="https://awoiaf.westeros.org/index.php/A_Knight_of_the_Seven_Kingdoms" target="_blank">A Knight of the Seven Kingdoms</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Feast_for_Crows" target="_blank">A Feast for Crows</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Clash_of_Kings" target="_blank">A Clash of Kings</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Storm_of_Swords" target="_blank">A Storm of Swords</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Betrayal_of_Bindy_Mackenzie" target="_blank">Becoming Bindy Mackenzie</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Perks_of_Being_a_Wallflower" target="_blank">The Perks of Being a Wallflower</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Alchemist_(novel)" target="_blank">The Alchemist</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Brief_History_of_Time" target="_blank">A Brief History of Time</a></li>
-				<li><a class = "a2" href="https://starwars.fandom.com/wiki/Ahsoka_(novel)" target="_blank">Ahsoka</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Holes_(novel)" target="_blank">Holes</a></li>
-				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint</a></li>
-				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Titans:_The_Return_of_Wally_West_(Collected)" target="_blank">Titans: The Return of Wally West</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter and the Cursed Child</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter" target="_blank">Harry Potter Book Series</a></li>
-				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis</a></li>
-				<li><a class = "a2"  href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe</a></li>
+				<li><a class="a2" href="https://en.wikipedia.org/wiki/Astrophysics_for_People_in_a_Hurry" target="_blank"> Astrophysics for People in a Hurry &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2" href="https://awoiaf.westeros.org/index.php/A_Knight_of_the_Seven_Kingdoms" target="_blank">A Knight of the Seven Kingdoms &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Feast_for_Crows" target="_blank">A Feast for Crows &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Clash_of_Kings" target="_blank">A Clash of Kings &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Storm_of_Swords" target="_blank">A Storm of Swords &starf; &starf; &starf; &starf; &starf;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Betrayal_of_Bindy_Mackenzie" target="_blank">Becoming Bindy Mackenzie &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Perks_of_Being_a_Wallflower" target="_blank">The Perks of Being a Wallflower &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Alchemist_(novel)" target="_blank">The Alchemist &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Brief_History_of_Time" target="_blank">A Brief History of Time &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2" href="https://starwars.fandom.com/wiki/Ahsoka_(novel)" target="_blank">Ahsoka &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Holes_(novel)" target="_blank">Holes &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Titans:_The_Return_of_Wally_West_(Collected)" target="_blank">Titans: The Return of Wally West &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter and the Cursed Child &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter" target="_blank">Harry Potter Book series &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis &starf; &starf; &star; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe &starf; &starf; &starf; &star; &star;</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Avatar:_The_Last_Airbender_%E2%80%93_The_Search" target="_blank">Avatar: The Last Airbender- The Search</a></li>
-				<li><a class = "a2"  href="https://spiderman.fandom.com/wiki/Spider-Man_Noir_(Volume_1)_2" target="_blank">Spider-Man: Noir</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Captain_Underpants" target="_blank">Captain Underpants Book Series</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Asterix" target="_blank">Asterix Comic Book Series</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/The_Adventures_of_Tintin" target="_blank">The Adventures of Tintin Comic Book series</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Finding_Cassie_Crazy" target="_blank">Finding Cassie Crazy</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Feeling_Sorry_for_Celia" target="_blank">Feeling Sorry for Celia</a></li>
-				<li><a class = "a2"  href="https://www.goodreads.com/book/show/7097618-the-ghosts-of-ashbury-high" target="_blank">The Ghosts of Ashbury High</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Big_Nate" target="_blank">Big Nate Book Series</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Diary_of_a_Wimpy_Kid" target="_blank">Diary of a Wimpy Kid Book Series</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/The_Right_Side_of_History" target="_blank">The Right Side of History</a></li>
+				<li><a class = "a2"  href="https://spiderman.fandom.com/wiki/Spider-Man_Noir_(Volume_1)_2" target="_blank">Spider-Man: Noir &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Asterix" target="_blank">Asterix Comic Book series &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/The_Adventures_of_Tintin" target="_blank">The Adventures of Tintin Comic Book series &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Finding_Cassie_Crazy" target="_blank">Finding Cassie Crazy &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Feeling_Sorry_for_Celia" target="_blank">Feeling Sorry for Celia &starf; &starf; &star; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://www.goodreads.com/book/show/7097618-the-ghosts-of-ashbury-high" target="_blank">The Ghosts of Ashbury High &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Big_Nate" target="_blank">Big Nate Book series &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Diary_of_a_Wimpy_Kid" target="_blank">Diary of a Wimpy Kid Book series &starf; &starf; &star; &star; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/The_Right_Side_of_History" target="_blank">The Right Side of History &starf; &star; &star; &star; &star;</a></li>
 			</ul>
 	</main>
 	<!-- Footer element -->
