--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War &starf; &starf; &starf; &star; &star;</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis &starf; &starf; &star; &star; &star;</a></li>
 				<li><a class = "a2"  href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe &starf; &starf; &starf; &star; &star;</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Avatar:_The_Last_Airbender_%E2%80%93_The_Search" target="_blank">Avatar: The Last Airbender- The Search</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Avatar:_The_Last_Airbender_%E2%80%93_The_Search" target="_blank">Avatar: The Last Airbender- The Search &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class = "a2"  href="https://spiderman.fandom.com/wiki/Spider-Man_Noir_(Volume_1)_2" target="_blank">Spider-Man: Noir &starf; &starf; &starf; &star; &star;</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Asterix" target="_blank">Asterix Comic Book series &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/The_Adventures_of_Tintin" target="_blank">The Adventures of Tintin Comic Book series &starf; &starf; &starf; &star; &star;</a></li>
