Note: tap and hold

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		<h2 class="about">What is this website for?</h2>
 		<p class="aboutcap">This website is a space for me to practice my coding and share my love of books.</p>
 		<!-- Currently reading -->
-		<h2 class="currently">Currently Reading (tap & hold a book cover to view its description):</h2>
+		<h2 class="currently">Currently Reading:</h2>
+		<p class="note">(Tap & hold a book cover to view its description).
 		<div id="boxes">	
 			<div id="leftbook">
 				<img src="img2/sixofcrows.jpeg" class="leftbookimg">
