--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
 	<link rel="stylesheet" type="text/css" href="css/sangwa-reads.css">
 	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Red+Rose&display=swap" rel="stylesheet">
+
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-122SHF8KE2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-122SHF8KE2');
+</script>
 </head>
-<body>
+
+
+
+<body>	
 	<!-- header element -->
 	<header>
 		<img src="img2/newdp.jpeg">
