note only show on mobile

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
   gtag('config', 'G-122SHF8KE2');
 </script>
+
+
+
+
+
 </head>
 
 
@@ -40,7 +45,9 @@
 		<p class="aboutcap">This website is a space for me to practice my coding and share my love of books.</p>
 		<!-- Currently reading -->
 		<h2 class="currently">Currently Reading:</h2>
-		<p class="note">(Tap & hold a book cover to view its description).
+		<div class="mobileshow">
+			<p class="note">(Tap on a book cover to reveal it's description).</p> 	
+		</div> 
 		<div id="boxes">	
 			<div id="leftbook">
 				<img src="img2/sixofcrows.jpeg" class="leftbookimg">
