book up date and book recommendation page
recommendation page not yet working

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 		</div> 
 		<div id="boxes">	
 			<div id="leftbook">
-				<img src="img2/sixofcrows.jpeg" class="leftbookimg">
+				<img src="img2/adarkershadeofmagic.jpeg" class="leftbookimg">
 				<p class="leftbookcap">
-					<em>Six of Crows</em>
+					<em>A Dark Shade of Magic</em>
 				<p class="leftbookdes">
-					"Ketterdam: a bustling hub of international trade where anything can be had for the right price—and no one knows that better than criminal prodigy Kaz Brekker. Kaz is offered a chance at a deadly heist that could make him rich beyond his wildest dreams. But he can’t pull it off alone. . . .."
+					"After an exchange goes awry, Kell escapes to Grey London and runs into Delilah Bard, a cut-purse with lofty aspirations. She first robs him, then saves him from a deadly enemy, and finally forces Kell to spirit her to another world for a proper adventure."
 				</p>
 			</div>
 			<div id="rightbook">
@@ -130,6 +130,8 @@
 		<br>
 			<h2 class="other">Other Books I Have Read:</h2>
 			<ul>
+				<li><a class="a2" href="https://en.wikipedia.org/wiki/Crooked_Kingdom" target="_blank"> Crooked Kingdom &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class="a2" href="https://en.wikipedia.org/wiki/Six_of_Crows" target="_blank"> Six of Crows &starf; &starf; &starf; &starf; &starf;</a></li>
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/Astrophysics_for_People_in_a_Hurry" target="_blank"> Astrophysics for People in a Hurry &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class = "a2" href="https://awoiaf.westeros.org/index.php/A_Knight_of_the_Seven_Kingdoms" target="_blank">A Knight of the Seven Kingdoms &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Feast_for_Crows" target="_blank">A Feast for Crows &starf; &starf; &starf; &starf; &star;</a></li>
