--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 				</p>
 			</div>
 			<div id="rightbook">
-				<img src="img2/undying.jpeg"  class="rightbookimg">
-				<p class="rightbookcap"><em>The Undying</em></p>
-				<p class="rightbookdes">"A week after her forty-first birthday, the acclaimed poet Anne Boyer was diagnosed with highly aggressive triple-negative breast cancer. "</p>
+				<img src="img2/poor economics.jpeg"  class="rightbookimg">
+				<p class="rightbookcap"><em>Poor Economics: A Radical Rethinking of the Way to Fight Global Poverty</em></p>
+				<p class="rightbookdes">"The winners of the Nobel Prize in Economics upend the most common assumptions about how economics works in this gripping and disruptive portrait of how poor people actually live."</p>
 
 			</div>	
 		</div>
@@ -130,6 +130,7 @@
 		<br>
 			<h2 class="other">Other Books I Have Read:</h2>
 			<ul>
+				<li><a class="a2" href="https://www.goodreads.com/book/show/40664707-the-undying" target="_blank"> The Undying &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/Crooked_Kingdom" target="_blank"> Crooked Kingdom &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/Six_of_Crows" target="_blank"> Six of Crows &starf; &starf; &starf; &starf; &starf;</a></li>
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/Astrophysics_for_People_in_a_Hurry" target="_blank"> Astrophysics for People in a Hurry &starf; &starf; &starf; &starf; &star;</a></li>
