--- a/quotes.html
+++ b/quotes.html
@@ -14,6 +14,67 @@
 		<br>
 	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Dance with Dragons</em></p>
 
+	<p class= "quotestext">“No mourners. No funerals. Among them, it passed for 'good luck."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Leigh Bardugo, <em>Six of Crows</em></p>
+
+	<p class= "quotestext">“She'd laughed, and if he could have bottled the sound and gotten drunk on it every night, he would have. It terrified him."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Leigh Bardugo, <em>Six of Crows</em></p>
+
+	<p class= "quotestext">“I'm a business man," he'd told her. "No more, no less."<br>
+		"You're a thief, Kaz."<br>
+"Isn't that what I just said?"
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Leigh Bardugo, <em>Six of Crows</em></p>
+
+	<p class= "quotestext">“She smiled then, her cheeks red, her cheeks scattered with some kind of dust. It was a smile he thought he might die to earn again."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Leigh Bardugo, <em>Crooked Kingdom</em></p>
+
+	<p class= "quotestext">“Crows remember human faces. They remember the people who feed them, who are kind to them. And the people who wrong them too. They don’t forget. They tell each other who to look after and who to watch out for"
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Leigh Bardugo, <em>Crooked Kingdom</em></p>
+
+	<p class= "quotestext">“Why do you guys say that, anyway? No mourners, no funerals? Why not just say good luck or be safe?"<br>
+	"We like to keep our expectations low."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Leigh Bardugo, <em>Six of Crows</em></p>
+
+	<p class= "quotestext">“You don’t look like a monster."<br>
+	"I’ll tell you a secret, Hanna. The really bad monsters never look like monsters."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Leigh Bardugo, <em>Six of Crows</em></p>
+
+	<p class= "quotestext">“Suppose for a moment the claims about pain’s ineffability are historically specific and ideological, that pain is widely declared inarticulate for the reason that we are not supposed to share a language for how we really feel."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Anne Boyer, <em>The Undying</em></p>
+
+	<p class= "quotestext">“A person who complains about any aspect of breast cancer treatment in public is often drowned out by a chorus of people, many of whom have never had cancer, accusing her of ingratitude, saying she is lucky, warning her that her bad attitude may kill her, reminding her she could be dead."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Anne Boyer, <em>The Undying</em></p>
+
+
+	<p class= "quotestext">“The universe is under no obligation to make sense to you. —NDT"
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Neil deGrasse Tyson, <em>Astrophysics for People in a Hurry</em></p>
+
+	<p class= "quotestext">“The power and beauty of physical laws is that they apply everywhere, whether or not you choose to believe in them. In other words, after the laws of physics, everything else is opinion."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Neil deGrasse Tyson, <em>Astrophysics for People in a Hurry</em></p>
+
+	<p class= "quotestext">“We are stardust brought to life, then empowered by the universe to figure itself out—and we have only just begun"
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Neil deGrasse Tyson, <em>Astrophysics for People in a Hurry</em></p>
+
+	<p class= "quotestext">“People who believe they are ignorant of nothing have neither looked for, nor stumbled upon, the boundary between what is known and unknown in the universe."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Neil deGrasse Tyson, <em>Astrophysics for People in a Hurry</em></p>
+
+	<p class= "quotestext">“Science is not just about seeing, it’s about measuring, preferably with something that’s not your own eyes, which are inextricably conjoined with the baggage of your brain. That baggage is more often than not a satchel of preconceived ideas, post-conceived notions, and outright bias."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Neil deGrasse Tyson, <em>Astrophysics for People in a Hurry</em></p>
+
 	<p class= "quotestext">“Men's lives have meaning, not their deaths."
 		<br>
 	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Dance with Dragons</em></p>
