--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
 		</div> 
 		<div id="boxes">	
 			<div id="leftbook">
-				<img src="img2/adarkershadeofmagic.jpeg" class="leftbookimg">
+				<img src="img2/agatheringofshadows.jpeg" class="leftbookimg">
 				<p class="leftbookcap">
-					<em>A Dark Shade of Magic</em>
+					<em>A Gathering of Shadows</em>
 				<p class="leftbookdes">
-					"After an exchange goes awry, Kell escapes to Grey London and runs into Delilah Bard, a cut-purse with lofty aspirations. She first robs him, then saves him from a deadly enemy, and finally forces Kell to spirit her to another world for a proper adventure."
+					"Black London has risen again-and so to keep magic's balance, another London must fall."
 				</p>
 			</div>
 			<div id="rightbook">
-				<img src="img2/poor economics.jpeg"  class="rightbookimg">
-				<p class="rightbookcap"><em>Poor Economics: A Radical Rethinking of the Way to Fight Global Poverty</em></p>
-				<p class="rightbookdes">"The winners of the Nobel Prize in Economics upend the most common assumptions about how economics works in this gripping and disruptive portrait of how poor people actually live."</p>
+				<img src="img2/goodeconomicsforhardtimes.jpeg"  class="rightbookimg">
+				<p class="rightbookcap"><em>Good Economics for Hard Times</em></p>
+				<p class="rightbookdes">"Banerjee and Duflo draw from recent developments in economics research to argue solutions to the issues facing modern economies and societies around the world, including slowing economic growth, immigration, income inequality, climate change, globalization and technological unemployment. "</p>
 
 			</div>	
 		</div>
@@ -130,10 +130,45 @@
 		<br>
 			<h2 class="other">Other Books I Have Read:</h2>
 			<ul>
-				<li><a class="a2" href="https://www.goodreads.com/book/show/40664707-the-undying" target="_blank"> The Undying &starf; &starf; &starf; &starf; &star;</a></li>
-				<li><a class="a2" href="https://en.wikipedia.org/wiki/Crooked_Kingdom" target="_blank"> Crooked Kingdom &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class="a2" href="https://economics.mit.edu/people/faculty/abhijit-banerjee/poor-economics" target="_blank"> Poor Economics &starf; &starf; &starf; &starf; &starf;</a></li>
+				<p class="other book descriptions">
+					"Why do the poor borrow to save? Why do they miss out on free life-saving immunizations, but pay for unnecessary drugs? In Poor Economics, Abhijit V. Banerjee and Esther Duflo, two award-winning MIT professors, answer these questions based on years of field research from around the world. Called "marvelous, rewarding" by the Wall Street Journal, the book offers a radical rethinking of the economics of poverty and an intimate view of life on 99 cents a day. Poor Economics shows that creating a world without poverty begins with understanding the daily decisions facing the poor."
+					<br>
+					&nbsp; &nbsp; &nbsp; - &nbsp; Abhijit V. Banerjee and Esther Duflo 
+				</p>
+
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/Six_of_Crows" target="_blank"> Six of Crows &starf; &starf; &starf; &starf; &starf;</a></li>
+				<p class="other book descriptions">
+					"Ketterdam: a bustling hub of international trade where anything can be had for the right price—and no one knows that better than criminal prodigy Kaz Brekker. Kaz is offered a chance at a deadly heist that could make him rich beyond his wildest dreams. But he can’t pull it off alone. . . ."
+					<br>
+					&nbsp; &nbsp; &nbsp; - &nbsp; Leigh Bardugo 
+				</p>
+
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/Astrophysics_for_People_in_a_Hurry" target="_blank"> Astrophysics for People in a Hurry &starf; &starf; &starf; &starf; &star;</a></li>
+
+				<p class="other book descriptions">
+					"While you wait for your morning coffee to brew, for the bus, the train, or a plane to arrive, Astrophysics for People in a Hurry will reveal just what you need to be fluent and ready for the next cosmic headlines: from the Big Bang to black holes, from quarks to quantum mechanics, and from the search for planets to the search for life in the universe."
+							<br>
+					&nbsp; &nbsp; &nbsp; - &nbsp; Neil de Grasse Tyson
+				</p>
+
+				<li><a class="a2" href="https://www.goodreads.com/book/show/40664707-the-undying" target="_blank"> The Undying &starf; &starf; &starf; &starf; &star;</a></li>
+
+				<p class="other book descriptions">
+					"A week after her forty-first birthday, the acclaimed poet Anne Boyer was diagnosed with highly aggressive triple-negative breast cancer. For a single mother living paycheck to paycheck who had always been the caregiver rather than the one needing care, the catastrophic illness was both a crisis and an initiation into new ideas about mortality and the gendered politics of illness."
+							<br>
+					&nbsp; &nbsp; &nbsp; - &nbsp; Anne Boyer
+				</p>
+
+				<li><a class="a2" href="https://markmanson.net/books/everything-is-fucked" target="_blank"> Everything is Fucked: A Book About Hope &starf; &starf; &starf; &star; &star;</a></li>
+
+				<p class="other book descriptions">
+					"Ever wonder why greater connectivity seems to make everyone just hate each other more? Ever wonder why the news always seems so depressing? Ever wonder why people are seemingly becoming more anxious and miserable despite life getting easier? Well, buckle up bitches, Uncle Mark is taking you for another ride. Just like The Subtle Art of Not Giving a F*ck questioned our conventional wisdom on what makes us happy, Everything Is F*cked: A Book About Hope questions our assumptions on what makes life worth living."
+							<br>
+					&nbsp; &nbsp; &nbsp; - &nbsp; Mark Manson
+				</p>
+				<li><a class="a2" href="https://en.wikipedia.org/wiki/A_Darker_Shade_of_Magic" target="_blank"> A Darker Shade of Magic &starf; &starf; &starf; &star; &star;</a></li>
+				<li><a class="a2" href="https://en.wikipedia.org/wiki/Crooked_Kingdom" target="_blank"> Crooked Kingdom &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class = "a2" href="https://awoiaf.westeros.org/index.php/A_Knight_of_the_Seven_Kingdoms" target="_blank">A Knight of the Seven Kingdoms &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Feast_for_Crows" target="_blank">A Feast for Crows &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Clash_of_Kings" target="_blank">A Clash of Kings &starf; &starf; &starf; &starf; &star;</a></li>
@@ -147,7 +182,7 @@
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint &starf; &starf; &starf; &starf; &star;</a></li>
 				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Titans:_The_Return_of_Wally_West_(Collected)" target="_blank">Titans: The Return of Wally West &starf; &starf; &starf; &star; &star;</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter and the Cursed Child &starf; &starf; &starf; &star; &star;</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter" target="_blank">Harry Potter Book series &starf; &starf; &starf; &starf; &star;</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter" target="_blank">Harry Potter Book series &starf; &starf; &starf; &starf; &starf;</a></li>
 				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War &starf; &starf; &starf; &star; &star;</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis &starf; &starf; &star; &star; &star;</a></li>
 				<li><a class = "a2"  href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe &starf; &starf; &starf; &star; &star;</a></li>
