--- a/quotes.html
+++ b/quotes.html
@@ -55,7 +55,7 @@
 	&nbsp; &nbsp; &nbsp; - &nbsp; Anne Boyer, <em>The Undying</em></p>
 
 
-	<p class= "quotestext">“The universe is under no obligation to make sense to you. —NDT"
+	<p class= "quotestext">“The universe is under no obligation to make sense to you."
 		<br>
 	&nbsp; &nbsp; &nbsp; - &nbsp; Neil deGrasse Tyson, <em>Astrophysics for People in a Hurry</em></p>
 
