--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<main>
 		<div class="row">
 			<div class="col"><a class="top" href="https://www.instagram.com/sangwa_/" target="_blank">Instagram</a></div>
-			<div class="col"><a class= "top" href="https://twitter.com/RealSlimSangwa" target="_blank">Twitter</a></div>
+			<div class="col"><a class= "top" href="https://www.goodreads.com/user/show/169074745-sangwani-simwaka" target="_blank">GoodReads Profile</a></div>
 			<div class="col"><a class="top" href="quotes.html" title="Check out my favourite books quotes">Favourite Book Quotes</a></div>
 			<div class= "col"><a class = "top" href = "contact.html" title="If you wanna get in touch with me for some reason"> Contact Info</a></div>
 		</div>
@@ -50,17 +50,17 @@
 		</div> 
 		<div id="boxes">	
 			<div id="leftbook">
-				<img src="img2/agatheringofshadows.jpeg" class="leftbookimg">
+				<img src="img2/aconjuringoflight.jpeg" class="leftbookimg">
 				<p class="leftbookcap">
-					<em>A Gathering of Shadows</em>
+					<em>A Conjuring of Light</em>
 				<p class="leftbookdes">
-					"Black London has risen again-and so to keep magic's balance, another London must fall."
+					"The precarious equilibrium among four Londons has reached its breaking point. Once brimming with the red vivacity of magic, darkness casts a shadow over the Maresh Empire, leaving a space for another London to rise."
 				</p>
 			</div>
 			<div id="rightbook">
-				<img src="img2/goodeconomicsforhardtimes.jpeg"  class="rightbookimg">
-				<p class="rightbookcap"><em>Good Economics for Hard Times</em></p>
-				<p class="rightbookdes">"Banerjee and Duflo draw from recent developments in economics research to argue solutions to the issues facing modern economies and societies around the world, including slowing economic growth, immigration, income inequality, climate change, globalization and technological unemployment. "</p>
+				<img src="img2/thesongofthecell.jpeg"  class="rightbookimg">
+				<p class="rightbookcap"><em>The Song of the Cell: An Exploration of Medicine and the New Human </em></p>
+				<p class="rightbookdes">"In an account both lyrical and capacious, Mukherjee takes us through an evolution of human understanding: from the seventeenth-century discovery that humans are made up of cells to our cutting-edge technologies for manipulating and deploying cells for therapeutic purposes."</p>
 
 			</div>	
 		</div>
@@ -125,25 +125,63 @@
 			<div id="rightbox">
 				<p class="adancetext"> A Dance with Dragons is my second pick from a Song of Ice and Fire. In the latest and longest installment of the series, Martin takes the story to the next level. The tale is filled with unexpected twists, unforeseen consequences and unrelenting cruelty. The reader never knows what's next for their favourite characters in this unforgiving story. Martin said it is really "mean" that some fans are afraid he'll die before finishing the last two books. I agree with Martin. But I also think it will be a damn shame if we don't get a conclusion to his epic tale.</p>
 			</div>
+
+			<div id = "leftbox">
+				<img src="img2/pooreconomics.jpeg">
+				<p class="pooreconomicscaption"><em>Poor Economics: A Radical Rethinking of the Way to Fight Global Poverty</em>
+				<p class="pooreconomicsdescription">"Why do the poor borrow to save? Why do they miss out on free life-saving immunizations, but pay for unnecessary drugs? In Poor Economics, Abhijit V. Banerjee and Esther Duflo, two award-winning MIT professors, answer these questions based on years of field research from around the world. Poor Economics shows that creating a world without poverty begins with understanding the daily decisions facing the poor."</p>				
+			</div>
+			</div>
+			<div id="rightbox">
+				<p class="pooreconomicstext"> Insert Poor economics review here </p>
+			</div>
+
+			<div id = "leftbox">
+				<img src="img2/goodeconomicsforhardtimes.jpeg">
+				<p class="goodeconomicscaption"><em>Good Economics for Hard Times: Better Answers to Our Biggest Problems </em>
+				<p class="goodeconomicsdescription">"Good Economics for Hard Times makes a persuasive case for an intelligent interventionism and a society built on compassion and respect and show how economics, when done right, can help us solve the thorniest social and political problems of the day."</p>				
+			</div>
+			</div>
+			<div id="rightbox">
+				<p class="goodeconomicstext"> Insert good economics review here </p>
+			</div>
+
+			<div id = "leftbox">
+				<img src="img2/atomichabits.jpeg">
+				<p class="atomichabitscaption"><em>Atomic Habits: An Easy & Proven Way to Build Good Habits & Break Bad Ones</em>
+				<p class="atomichabitsdescription">"Atomic Habits will reshape the way you think about progress and success, and give you the tools and strategies you need to transform your habits--whether you are a team looking to win a championship, an organization hoping to redefine an industry, or simply an individual who wishes to quit smoking, lose weight, reduce stress, or achieve any other goal."</p>				
+			</div>
+			</div>
+			<div id="rightbox">
+				<p class="atomichabitstext"> Insert Atomic Habits review here </p>
+			</div>
+
+			<div id = "leftbox">
+				<img src="img2/sixofcrows.jpeg">
+				<p class="sixofcrowscaption"><em>Six of Crows</em>
+				<p class="sixofcrowsdescription">"Ketterdam: a bustling hub of international trade where anything can be had for the right price—and no one knows that better than criminal prodigy Kaz Brekker. Kaz is offered a chance at a deadly heist that could make him rich beyond his wildest dreams. But he can’t pull it off alone. . . ."</p>				
+			</div>
+			</div>
+			<div id="rightbox">
+				<p class="sixofcrowstext"> Insert Six of Crows review here </p>
+			</div>
+
+			<div id = "leftbox">
+				<img src="img2/extremeownership.jpeg">
+				<p class="sixofcrowscaption"><em>Extreme Ownership: How US Naval Seals Lead & Win.</em>
+				<p class="sixofcrowsdescription">"Extreme Ownership will make you a better leader. In it, Navy SEALs Willink and Babin discuss essential leadership lessons, including practicing extreme ownership, killing your ego, enforcing standards, simplifying, prioritizing, and executing."</p>				
+			</div>
+			</div>
+			<div id="rightbox">
+				<p class="sixofcrowstext"> Insert Extreme Ownership review here </p>
+			</div>
+
+			</div>
 		</div>
 		<!-- Other Books I've Read -->
 		<br>
 			<h2 class="other">Other Books I Have Read:</h2>
 			<ul>
-				<li><a class="a2" href="https://economics.mit.edu/people/faculty/abhijit-banerjee/poor-economics" target="_blank"> Poor Economics &starf; &starf; &starf; &starf; &starf;</a></li>
-				<p class="other book descriptions">
-					"Why do the poor borrow to save? Why do they miss out on free life-saving immunizations, but pay for unnecessary drugs? In Poor Economics, Abhijit V. Banerjee and Esther Duflo, two award-winning MIT professors, answer these questions based on years of field research from around the world. Called "marvelous, rewarding" by the Wall Street Journal, the book offers a radical rethinking of the economics of poverty and an intimate view of life on 99 cents a day. Poor Economics shows that creating a world without poverty begins with understanding the daily decisions facing the poor."
-					<br>
-					&nbsp; &nbsp; &nbsp; - &nbsp; Abhijit V. Banerjee and Esther Duflo 
-				</p>
-
-				<li><a class="a2" href="https://en.wikipedia.org/wiki/Six_of_Crows" target="_blank"> Six of Crows &starf; &starf; &starf; &starf; &starf;</a></li>
-				<p class="other book descriptions">
-					"Ketterdam: a bustling hub of international trade where anything can be had for the right price—and no one knows that better than criminal prodigy Kaz Brekker. Kaz is offered a chance at a deadly heist that could make him rich beyond his wildest dreams. But he can’t pull it off alone. . . ."
-					<br>
-					&nbsp; &nbsp; &nbsp; - &nbsp; Leigh Bardugo 
-				</p>
-
 				<li><a class="a2" href="https://en.wikipedia.org/wiki/Astrophysics_for_People_in_a_Hurry" target="_blank"> Astrophysics for People in a Hurry &starf; &starf; &starf; &starf; &star;</a></li>
 
 				<p class="other book descriptions">
