--- a/quotes.html
+++ b/quotes.html
@@ -226,6 +226,13 @@
 	&nbsp; &nbsp; &nbsp; - &nbsp; Jaclyn Moriarty, <em>The Murder of Bindy Mackenzie</em>
 	</p>
 
+	<p class= "quotestext">“Poverty is not just a lack of money; it isnot having the capability to reaize one's full potential as a human being."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Abhijit V. Banerjee, <em>Poor Economics</em></p>
+
+	<p class= "quotestext">“The poor are no less rational than anyone else--quite the contrary. Precisely because they have so little, we often find them putting much careful thought into their choices: they have to be sophisticated economists just to survive."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Abhijit V. Banerjee, <em>Poor Economics</em></p>
 
 	<p class = "quotestext">“When you spend your whole life living in a hole, the only way you can go is up.”<br>
 	&nbsp; &nbsp; &nbsp; - &nbsp; Louis Sachar, <em>Holes</em>
